--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,54 @@
 .song:nth-child(2n) {
     background: #eee;
 }
+
+.player {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    padding: 10px;
+    border-top: 1px solid #999;
+    box-shadow: -4px 0 10px -6px #444;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#length {
+    width: 80%;
+    height: 3px;
+    background: #eee;
+    margin: 5px;
+}
+
+#controls {
+    margin: 5px;
+}
+
+#play {
+    width: 20px;
+    height: 20px;
+    background: #000;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+
+#play::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 20px;
+    transform: rotate(45deg);
+    background: #fff;
+    position: relative;
+    left: -12px;
+    top: 7px;
+}
+
+#track_details {
+    text-align: center;
+    font-size: 0.8em;
+    display: flex;
+}
